[package]
name = "ropias"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.1"
iced = { version = "0.13.1", features = ["async-std"] }
rusqlite = "0.32.1"
serde = { version = "1.0.210", features = ["derive"] }

# Quitar esta línea si no se utilizan, las intale para el ejemplo
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
directories-next = "2.0"
tracing-subscriber = "0.3"
async-std = { version = "1.13.0" }

